--- a/src/app/modules/market-data/components/market-data-list/market-data-list.component.html
+++ b/src/app/modules/market-data/components/market-data-list/market-data-list.component.html
@@ -4,7 +4,7 @@
         The actual rendered columns are set as a property on the row definition" -->
 
   <ng-container matColumnDef="key">
-    <th mat-header-cell *matHeaderCellDef> Date </th>
+    <th mat-header-cell *matHeaderCellDef> Key data </th>
     <td mat-cell *matCellDef="let element"> {{element.key }} </td>
   </ng-container>
 
